accordian issue fixed and associate card designed

--- a/ipu/templates/account/base_home_layout.html
+++ b/ipu/templates/account/base_home_layout.html
@@ -58,10 +58,11 @@
                 <li class="divider"></li>
             {% endblock %} 
         </ul>
+
         <ul class="collapsible dropdown-content" data-collapsible="accordion" id="dropdown3">
             <div id="noti-head">Notifications</div>
             {% block notifications_dropdown %}
-            <!--every li here represents a notifcations. header anf body for notifications repectively-->
+            <!--every li here represents a notifcations. header and body for notifications repectively-->
                 <li>
                     <div class="collapsible-header">First</div>
                     <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
