--- a/ipu/templates/student/pub_profile.html
+++ b/ipu/templates/student/pub_profile.html
@@ -28,6 +28,14 @@
 		border-color: white;
 		border-left-width: 1px;
 		border-right-width: 1px;
+		max-height: 100px;
+		overflow-y: scroll; 
+    }
+
+    #out-box
+    {
+    	overflow-y: scroll;
+    	overflow-x: hidden;
     }
     
 
