Add flow between recruitment and other apps
- Student: View companies, apply, sessions
- College, Company, Faculty - Excel sheet, Sessions(view, edit), View requests, Make association request
- Notify both parties on changes in session (Not yet tested)
- Increased the notification message size to 1024 bytes
- Added last_modified_by in PlacementSession model

--- a/ipu/static/account/css/base_home_layout.css
+++ b/ipu/static/account/css/base_home_layout.css
@@ -22,7 +22,7 @@ nav .brand-logo {
   background-color: #02b3e4;
   color: white;
   border-radius: 3px;
-  height: 20px;
+/*  height: 20px; */
 }
 
 
