--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -70,21 +70,14 @@
 	{% if edit_qual_form %}
 		<li class="tab col s2"><a href="#qualifications" style="color: #9c27b0 !important">Update Qualifications*</a></li>
 	{% endif %}
-	<li class="tab col s2"><a class="active" href="#tab1">Companies Visiting</a></li>
+	<li id="apply" class="tab col s2"><a class="active" href="#companies">Companies Visiting</a></li>
 	<li class="tab col s2"><a href="#tab2">Status</a></li>
 	<li class="tab col s2"><a href="#settings">Settings</a></li>
+	<li id="session" class="tab col s2"><a href="#sessions">Sessions</a></li>
 {% endblock %}
 
 {% block tabs_content %}
-	<div id="tab1" class="col s12">
-		{% if paygrade_form %}
-			<form method="POST" action="{% url 'paygrade' %}" id='paygrade-form'>
-				{% csrf_token %}
-				{% form form=paygrade_form %}{% endform %}
-				<button class="btn btn-waves" type="submit">Choose</button>
-			</form>
-		{% endif %}
-	</div>
+	<div id="companies" class="col s12"></div>
 	<div id="tab2" class="col s12">Data 2</div>
 	{% if edit_qual_form %}
 		<div id="qualifications" class="col s12">
@@ -110,7 +103,7 @@
 				<div class="col s3">
 					<ul class="tabs">
 						<li class="tab col s12"><a class="active" href="#account-settings">Account Settings</a></li>
-						<li class="tab col s12"><a  href="#upload-settings">Upload Image/Resume</a></li>
+						<li class="tab col s12"><a href="#upload-settings">Upload Image/Resume</a></li>
 						<li class="tab col s12"><a href="#social-settings">Social Profile Settings</a></li>
 						<li class="tab col s12"><a href="#tech-settings">Technical Profile Settings</a></li>
 					</ul>
@@ -148,20 +141,26 @@
 			</div>
 		</div>
 	</div>
+
+	<div id="sessions" class="col s12"></div>
+
+	{% if badge %}
+		<span class="badge" id="notifications_badge">{{ badge }}</span>
+	{% endif %}
 {% endblock %}
 
 {% block scripts %}
 	<script type="text/javascript" src="{% static 'common/search.js' %}"></script>
+	<script type="text/javascript" src="{% static 'common/sessions.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
 	<script type="text/javascript" src="{% static 'student/update.js' %}"></script>
+	<script type="text/javascript" src="{% static 'student/apply.js' %}"></script>
 	<script>
 		$(document).ready(function() {
 			Search.init();
-			{% if paygrade_form %}
-				Settings.init(['edit-account-form', 'upload-file-form', 'social-profile-form', 'tech-profile-form', 'paygrade-form']);
-			{% else %}
-				Settings.init(['edit-account-form', 'upload-file-form', 'social-profile-form', 'tech-profile-form']);
-			{% endif %}
+			Session.init();
+			Apply.init();
+			Settings.init(['edit-account-form', 'upload-file-form', 'social-profile-form', 'tech-profile-form']);
 			Update.init(['edit-student-form', 'edit-qual-form']);
 		});
 	</script>
