--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -72,6 +72,7 @@
 	{% endif %}
 	<li id="apply" class="tab col s2"><a class="active" href="#companies">Companies Visiting</a></li>
 	<li class="tab col s2"><a href="#tab2">Status</a></li>
+	<li id = "notification" class="tab col s2" url="{% url 'get_notifications' %}"><a href="#notifications">Notification</a></li>
 	<li class="tab col s2"><a href="#settings">Settings</a></li>
 	<li id="session" class="tab col s2"><a href="#sessions">Sessions</a></li>
 {% endblock %}
@@ -79,6 +80,31 @@
 {% block tabs_content %}
 	<div id="companies" class="col s12"></div>
 	<div id="tab2" class="col s12">Data 2</div>
+	<div id="notifications" class="col s12">
+		<div class="vertical-tabs">
+			<div class="row">
+				<div class="col s3">
+					<ul class="tabs">
+						<li class="tab col s12"><a id = "your-notifications" class="active" href="#your-notifications-div">Your Notifications</a></li>
+						<li class="tab col s12"><a id = "help" href="#help-div">Help !</a></li>
+					</ul>
+				</div>
+				<div class=" col s8 offset-s1">
+					<div id="your-notifications-div" class="col s12">
+		
+							<ul id = "your-notifications-div-ul" class="collection">
+							</ul>
+            
+					</div>
+					<div id="help-div" class="col s12">
+					<h1>Under Construction</h1>
+					</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- -->
 	{% if edit_qual_form %}
 		<div id="qualifications" class="col s12">
 			<form method="POST" action="{% url 'student_qual' %}" id="edit-qual-form">
@@ -154,12 +180,14 @@
 	<script type="text/javascript" src="{% static 'common/sessions.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
 	<script type="text/javascript" src="{% static 'student/update.js' %}"></script>
+	<script type="text/javascript" src="{% static 'notification/create_notification.js' %}"></script>
 	<script type="text/javascript" src="{% static 'student/apply.js' %}"></script>
 	<script>
 		$(document).ready(function() {
 			Search.init();
 			Session.init();
 			Apply.init();
+			Notification.init();
 			Settings.init(['edit-account-form', 'upload-file-form', 'social-profile-form', 'tech-profile-form']);
 			Update.init(['edit-student-form', 'edit-qual-form']);
 		});
