--- a/ipu/templates/account/base_home_layout.html
+++ b/ipu/templates/account/base_home_layout.html
@@ -122,7 +122,7 @@
                             {% endblock %}
                         </ul>
                     </div>
-                    <div id="tabs-data-div"> 
+                    <div id="tabs-data-div" class="row"> 
                         {% block tabs_content %}
                         {% endblock %}
                     </div>
