Add selection critera feature for sessions

--- a/ipu/templates/company/mysessions.html
+++ b/ipu/templates/company/mysessions.html
@@ -22,6 +22,7 @@
 			</p>
 			<span class="secondary-content">
 				<a href="{% url 'edit_session' session.sessid %}"><i class="fa fa-2x fa-pencil"></i></a>
+				<a href="{% url 'edit_criteria' session.sessid %}"><i class="fa fa-2x fa-list-ol"></i></a>
 				<a href="{% url 'excel' session.sessid %}" class="excel"><i class="fa fa-2x fa-file-excel-o"></i></a>
 			</span>
 			
