Celery; Change landing page
- Schedule activation email with Celery, Redis
- Moved old 'landing' files to 'auth'

--- a/ipu/templates/recruitment/edit_session.html
+++ b/ipu/templates/recruitment/edit_session.html
@@ -1,4 +1,4 @@
-{% extends 'account/base.html' %}
+{% extends 'account/navbar.html' %}
 {% load staticfiles %}
 {% load material_form %}
 {% block title %}Edit Session{% endblock %}
