landing_page work

--- a/ipu/static/account/css/base_home_layout.css
+++ b/ipu/static/account/css/base_home_layout.css
@@ -200,25 +200,24 @@ input {
 #search {
     position: relative;
     margin: 0 auto;
-    margin-right: 380px;
-    width: 370px;
+    margin-right: 350px;
+    width: 400px;
+
 
 
 }
 
 #search input {
-    height: 30px;
+    height: 60px;
     width: 100%;
     padding: 0 12px 0 25px;
-    background: white url("http://cssdeck.com/uploads/media/items/5/5JuDgOa.png") 8px 6px no-repeat;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #a8acbc #babdcc #c0c3d2;
+    background: white url("http://cssdeck.com/uploads/media/items/5/5JuDgOa.png") 8px 22px no-repeat;
     border-radius: 1px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     -o-box-sizing: border-box;
+    font-size: 15px;
     box-sizing: border-box;
     -webkit-box-shadow: inset 0 1px #e5e7ed, 0 1px 0 #fcfcfc;
     -moz-box-shadow: inset 0 1px #e5e7ed, 0 1px 0 #fcfcfc;
